--- a/src/main/resources/assets/sort_savvy/lang/en_us.json
+++ b/src/main/resources/assets/sort_savvy/lang/en_us.json
@@ -1,6 +1,11 @@
 {
-  "block.sort_savvy.quantum_chest_reader": "Quantum Chest Reader",
+  "block.sort_savvy.quantum_inventory_reader": "Quantum Inventory Reader",
   "itemGroup.sort_savvy.item_group": "SortSavvy",
   "gui.sort_savvy.save": "Save",
-  "gui.sort_savvy.unnamed": "Unnamed"
+  "gui.sort_savvy.unnamed": "Unnamed",
+  "overlay.sort_savvy.deletedDataEntry": "%d was deleted.",
+  "overlay.sort_savvy.renamedDataEntry": "%d was renamed to %d.",
+  "overlay.sort_savvy.dataEntryAlreadyExists": "%d exists already. Was not added.",
+  "overlay.sort_savvy.newDataEntry": "Was added as %d.",
+  "overlay.sort_savvy.toScanDirectoryChanged": "The scan direction is now %d."
 }
