Add to scan directory to screen

--- a/src/main/resources/assets/sort_savvy/lang/en_us.json
+++ b/src/main/resources/assets/sort_savvy/lang/en_us.json
@@ -3,6 +3,7 @@
   "itemGroup.sort_savvy.item_group": "SortSavvy",
   "gui.sort_savvy.save": "Save",
   "gui.sort_savvy.unnamed": "Unnamed",
+  "gui.sort_savvy.toScanDirectoryHelper": "Tries to scan: %d",
   "overlay.sort_savvy.deletedDataEntry": "%d was deleted.",
   "overlay.sort_savvy.renamedDataEntry": "%d was renamed to %d.",
   "overlay.sort_savvy.dataEntryAlreadyExists": "%d exists already. Was not added.",
